tests/whiley/valid/test_665.wyal
type nat is (int x)
where:
    x >= 0


assert "type invariant not satisfied":
    forall(int[] ys):
        if:
            ys == [1, 2, 3]
        then:
            ys is nat[]


