tests/whiley/invalid/test_126.wyal
type scf3nat is (int x)
where:
    x > 0


assert "type invariant not satisfied":
    forall(int[] x, int[] x$1):
        if:
            x == [1]
            x$1 == x[0:=-1]
        then:
            x$1 is scf3nat[]


